Add zookeeper as it is needed by schema-migrator-sync and use `signoz_...` tables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@
 # See also
 # https://certbot.eff.org/docs/install.html#running-with-docker
 
-name: machine
+name: "machine"
 
 services:
   reverse_proxy:
