--- a/telemetry/docker-compose.yml
+++ b/telemetry/docker-compose.yml
@@ -1,52 +1,13 @@
-x-common: &common
-  networks:
-    - telemetry
-  restart: unless-stopped
-
-x-clickhouse-defaults: &clickhouse-defaults
-  !!merge <<: *common
-  image: clickhouse/clickhouse-server:25.5.6
-  tty: true
-  labels:
-    signoz.io/scrape: true
-    signoz.io/port: 9363
-    signoz.io/path: /metrics
-  depends_on:
-    init-clickhouse:
-      condition: service_completed_successfully
-  healthcheck:
-    test:
-      - CMD
-      - wget
-      - --quiet
-      - --spider
-      - 0.0.0.0:8123/ping
-    interval: 30s
-    timeout: 5s
-    retries: 3
-  ulimits:
-    nproc: 65535
-    nofile:
-      soft: 262144
-      hard: 262144
-  environment:
-    - CLICKHOUSE_SKIP_USER_SETUP=1
-
-x-db-depend: &db-depend
-  !!merge <<: *common
-  depends_on:
-    clickhouse:
-      condition: service_healthy
-    # schema-migrator-sync:
-    #   condition: service_completed_successfully
+name: "telemetry"
 
 services:
   init-clickhouse:
-    !!merge <<: *common
-    image: clickhouse/clickhouse-server:25.5.6
+    image: "clickhouse/clickhouse-server:25.5.6"
+    volumes:
+      - ./common/clickhouse/user_scripts:/var/lib/clickhouse/user_scripts/
     command:
-      - bash
-      - -c
+      - "bash"
+      - "-c"
       - |
         version="v0.0.1"
         node_os=$$(uname -s | tr '[:upper:]' '[:lower:]')
@@ -56,16 +17,15 @@ services:
         wget -O histogram-quantile.tar.gz "https://github.com/SigNoz/signoz/releases/download/histogram-quantile%2F$${version}/histogram-quantile_$${node_os}_$${node_arch}.tar.gz"
         tar -xvzf histogram-quantile.tar.gz
         mv histogram-quantile /var/lib/clickhouse/user_scripts/histogramQuantile
-    restart: on-failure
-    volumes:
-      - ./common/clickhouse/user_scripts:/var/lib/clickhouse/user_scripts/
+    restart: "on-failure"
 
   clickhouse:
-    !!merge <<: *clickhouse-defaults
-    ports:
-      - ${TELEMETRY_DATA_PORT}:9000
-    #   - "8123:8123"
-    #   - "9181:9181"
+    image: "clickhouse/clickhouse-server:25.5.6"
+    depends_on:
+      init-clickhouse:
+        condition: "service_completed_successfully"
+      zookeeper:
+        condition: "service_healthy"
     volumes:
       - ./common/clickhouse/config.xml:/etc/clickhouse-server/config.xml
       - ./common/clickhouse/users.xml:/etc/clickhouse-server/users.xml
@@ -74,89 +34,151 @@ services:
       - ./common/clickhouse/cluster.xml:/etc/clickhouse-server/config.d/cluster.xml
       - ./common/clickhouse/storage.xml:/etc/clickhouse-server/config.d/storage.xml
       - clickhouse:/var/lib/clickhouse/
+    environment:
+      CLICKHOUSE_SKIP_USER_SETUP: "1"
+    # CLICKHOUSE_CLUSTER_ENABLED: "false"
+    ports:
+      - "0.0.0.0:${TELEMETRY_DATA_PORT}:9000"
+    #   - "0.0.0.0:8123:8123"
+    #   - "0.0.0.0:9181:9181"
+    restart: "unless-stopped"
+    healthcheck:
+      test:
+        - "CMD"
+        - "wget"
+        - "--quiet"
+        - "--spider"
+        - "0.0.0.0:8123/ping"
+      interval: "30s"
+      timeout: "5s"
+      retries: "3"
+    labels:
+      signoz.io/scrape: "true"
+      signoz.io/port: "9363"
+      signoz.io/path: "/metrics"
+    tty: "true"
+    ulimits:
+      nproc: "65535"
+      nofile:
+        soft: "262144"
+        hard: "262144"
+
+  zookeeper:
+    image: "signoz/zookeeper:3.7.1"
+    # ports:
+    #   - "0.0.0.0:2181:2181"
+    #   - "0.0.0.0:2888:2888"
+    #   - "0.0.0.0:3888:3888"
+    volumes:
+      - zookeeper:/bitnami/zookeeper
+    environment:
+      ZOO_SERVER_ID: "1"
+      ALLOW_ANONYMOUS_LOGIN: "yes"
+      ZOO_AUTOPURGE_INTERVAL: "1"
+      ZOO_ENABLE_PROMETHEUS_METRICS: "yes"
+      ZOO_PROMETHEUS_METRICS_PORT_NUMBER: "9141"
+    restart: "unless-stopped"
+    healthcheck:
+      test: ["CMD-SHELL", "curl -s -m 2 http://localhost:8080/commands/ruok | grep error | grep null"]
+      interval: "30s"
+      timeout: "5s"
+      retries: "3"
+    labels:
+      signoz.io/scrape: "true"
+      signoz.io/port: "9141"
+      signoz.io/path: "/metrics"
+    user: "root:root"
 
   signoz:
-    !!merge <<: *db-depend
-    image: signoz/signoz:v0.108.0
-    ports:
-      - ${TELEMETRY_HTTP_PORT}:8080 # signoz port
+    image: "signoz/signoz:v0.108.0"
+    depends_on:
+      clickhouse:
+        condition: "service_healthy"
+      schema-migrator-sync:
+        condition: "service_completed_successfully"
     #   - "6060:6060" # pprof port
     volumes:
       - ./common/signoz/prometheus.yml:/root/config/prometheus.yml
       - ./common/dashboards:/root/config/dashboards
       - sqlite:/var/lib/signoz/
     environment:
-      - SIGNOZ_ALERTMANAGER_PROVIDER=signoz
-      - SIGNOZ_TELEMETRYSTORE_CLICKHOUSE_DSN=tcp://clickhouse:9000
-      - SIGNOZ_SQLSTORE_SQLITE_PATH=/var/lib/signoz/signoz.db
-      - SIGNOZ_PROMETHEUS_CONFIG=/root/config/prometheus.yml
-      - SIGNOZ_ANALYTICS_ENABLED=true
-      # - SIGNOZ_TELEMETRYSTORE_CLICKHOUSE_CLUSTER=
-      - DASHBOARDS_PATH=/root/config/dashboards
-      - SIGNOZ_TELEMETRYSTORE_PROVIDER=clickhouse
-      - GODEBUG=netdns=go
-      - DEPLOYMENT_TYPE=docker-standalone-amd
-      - DOT_METRICS_ENABLED=true
+      SIGNOZ_ALERTMANAGER_PROVIDER: "signoz"
+      SIGNOZ_TELEMETRYSTORE_CLICKHOUSE_DSN: "tcp://clickhouse:9000"
+      SIGNOZ_SQLSTORE_SQLITE_PATH: "/var/lib/signoz/signoz.db"
+      SIGNOZ_PROMETHEUS_CONFIG: "/root/config/prometheus.yml"
+      SIGNOZ_ANALYTICS_ENABLED: "true"
+        # - SIGNOZ_TELEMETRYSTORE_CLICKHOUSE_CLUSTER: ""
+      DASHBOARDS_PATH: "/root/config/dashboards"
+      SIGNOZ_TELEMETRYSTORE_PROVIDER: "clickhouse"
+      GODEBUG: "netdns=go"
+      DEPLOYMENT_TYPE: "docker-standalone-amd"
+      DOT_METRICS_ENABLED: "true"
+    ports:
+      - "0.0.0.0:${TELEMETRY_HTTP_PORT}:8080" # signoz port
+    restart: "unless-stopped"
     healthcheck:
       test:
-        - CMD
-        - wget
-        - --quiet
-        - --spider
-        - http://signoz:8080/api/v1/health
-      interval: 30s
-      timeout: 5s
-      retries: 3
+        - "CMD"
+        - "wget"
+        - "--quiet"
+        - "--spider"
+        - "http://signoz:8080/api/v1/health"
+      interval: "30s"
+      timeout: "5s"
+      retries: "3"
 
-#   otel-collector:
-#     !!merge <<: *db-depend
-#     image: signoz/signoz-otel-collector:v0.129.12
-#     command:
-#       - --config=/etc/otel-collector-config.yml
-#       - --manager-config=/etc/manager-config.yml
-#       - --copy-path=/var/tmp/collector-config.yml
-#       - --feature-gates=-pkg.translator.prometheus.NormalizeName
-#     volumes:
-#       - ./otel-collector-config.yml:/etc/otel-collector-config.yml
-#       - ./common/signoz/otel-collector-opamp-config.yml:/etc/manager-config.yml
-#     environment:
-#       - OTEL_RESOURCE_ATTRIBUTES=host.name=signoz-host,os.type=linux
-#       - LOW_CARDINAL_EXCEPTION_GROUPING=false
-#     ports:
-#       # - "1777:1777" # pprof extension
-#       - "4317:4317" # OTLP gRPC receiver
-#       - "4318:4318" # OTLP HTTP receiver
-#     depends_on:
-#       signoz:
-#         condition: service_healthy
+  #   otel-collector:
+  #    depends_on:
+  #      clickhouse:
+  #        condition: "service_healthy"
+  #      schema-migrator-sync:
+  #        condition: "service_completed_successfully"
+  #     image: "signoz/signoz-otel-collector:v0.129.12"
+  #     command:
+  #       - "--config=/etc/otel-collector-config.yml"
+  #       - "--manager-config=/etc/manager-config.yml"
+  #       - "--copy-path=/var/tmp/collector-config.yml"
+  #       - "--feature-gates=-pkg.translator.prometheus.NormalizeName"
+  #     volumes:
+  #       - ./otel-collector-config.yml:/etc/otel-collector-config.yml
+  #       - ./common/signoz/otel-collector-opamp-config.yml:/etc/manager-config.yml
+  #     environment:
+  #       OTEL_RESOURCE_ATTRIBUTES: "host.name=signoz-host,os.type=linux"
+  #       LOW_CARDINAL_EXCEPTION_GROUPING: "false"
+  #     ports:
+  #       # - "0.0.0.0:1777:1777" # pprof extension
+  #       - "0.0.0.0:4317:4317" # OTLP gRPC receiver
+  #       - "0.0.0.0:4318:4318" # OTLP HTTP receiver
+  #     depends_on:
+  #       signoz:
+  #         condition: "service_healthy"
+  #     restart: "unless-stopped"
 
-#   schema-migrator-sync:
-#     !!merge <<: *common
-#     image: signoz/signoz-schema-migrator:v0.129.12
-#     command:
-#       - sync
-#       - --dsn=tcp://clickhouse:9000
-#       - --up=
-#     depends_on:
-#       clickhouse:
-#         condition: service_healthy
-#     restart: on-failure
+  schema-migrator-sync:
+    image: "signoz/signoz-schema-migrator:v0.129.12"
+    depends_on:
+      clickhouse:
+        condition: "service_healthy"
+    command:
+      - "sync"
+      - "--dsn=tcp://clickhouse:9000"
+      - "--up="
+    restart: "on-failure"
 
-#   schema-migrator-async:
-#     !!merge <<: *db-depend
-#     image: signoz/signoz-schema-migrator:v0.129.12
-#     command:
-#       - async
-#       - --dsn=tcp://clickhouse:9000
-#       - --up=
-#     restart: on-failure
-
-networks:
-  telemetry:
-    name: telemetry-network
+  schema-migrator-async:
+    image: "signoz/signoz-schema-migrator:v0.129.12"
+    depends_on:
+      clickhouse:
+        condition: "service_healthy"
+      schema-migrator-sync:
+        condition: "service_completed_successfully"
+    command:
+      - "async"
+      - "--dsn=tcp://clickhouse:9000"
+      - "--up="
+    restart: "on-failure"
 
 volumes:
   clickhouse:
-    name: telemetry-clickhouse
   sqlite:
-    name: telemetry-sqlite
+  zookeeper:
