--- a/telemetry/Makefile
+++ b/telemetry/Makefile
@@ -3,7 +3,7 @@
 
 include ./.env
 
-SHELL := /bin/bash
+SHELL := /usr/bin/env bash
 .SHELLFLAGS := -o errexit -o errtrace -o nounset -o pipefail -c
 MAKEFLAGS += --warn-undefined-variables
 
