--- a/.env.sample
+++ b/.env.sample
@@ -3,21 +3,20 @@ PRODUCTION_SUBDOMAIN=www
 STAGING_SUBDOMAIN=staging
 TELEMETRY_SUBDOMAIN=telemetry
 
+EXTRA_HOST=
+
 HTTP_PORT=7000
 HTTPS_PORT=7001
 PRODUCTION_HTTP_PORT=8000
 STAGING_HTTP_PORT=9000
-TELEMETRY_HTTP_PORT=10000
 
-EXTRA_HOST=
-
-TELEMETRY_DATA_HOST=127.0.0.1
-TELEMETRY_DATA_PORT=10001
+MONITOR_HTTP_PORT=10000
+PIPELINE_HTTP_PORT=10001
+LOGS_HTTP_PORT=10002
+METRICS_HTTP_PORT=10003
 
 EMAIL_ADDRESS=john.doe@sample.org
 SMTP_HOST=mail.sample.org
 SMTP_PORT=25
 
 NETWORK_INTERFACE=ens160
-
-MONIT_PASSWORD=
