--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -34,6 +34,30 @@ map $http_upgrade $connection_upgrade {
   '' close;
 }
 
+upstream production {
+  server host.docker.internal:${PRODUCTION_HTTP_PORT};
+}
+
+upstream staging {
+  server host.docker.internal:${STAGING_HTTP_PORT};
+}
+
+upstream monitor {
+  server host.docker.internal:${MONITOR_HTTP_PORT};
+}
+
+upstream pipeline {
+  server host.docker.internal:${PIPELINE_HTTP_PORT};
+}
+
+upstream logs {
+  server host.docker.internal:${LOGS_HTTP_PORT};
+}
+
+upstream metrics {
+  server host.docker.internal:${METRICS_HTTP_PORT};
+}
+
 server {
     listen *:80;
     server_tokens off;
@@ -63,12 +87,7 @@ server {
     server_tokens off;
 
     location / {
-        proxy_pass http://host.docker.internal:${PRODUCTION_HTTP_PORT};
-    }
-
-    location /monit/ {
-        rewrite ^/monit/(.*)$ /$1 break;
-        proxy_pass http://host.docker.internal:2812;
+        proxy_pass http://production;
     }
 
     location /email {
@@ -89,21 +108,21 @@ server {
     auth_basic_user_file /etc/apache2/.htpasswd;
 
     location / {
-        proxy_pass http://host.docker.internal:${STAGING_HTTP_PORT};
+        proxy_pass http://staging;
     }
 
     location /.well-known/ {
         auth_basic "off";
-        proxy_pass http://host.docker.internal:${STAGING_HTTP_PORT};
+        proxy_pass http://staging;
     }
 
     location /connect/ {
         auth_basic "off";
-        proxy_pass http://host.docker.internal:${STAGING_HTTP_PORT};
+        proxy_pass http://staging;
     }
 
     location /email/hubs {
-        proxy_pass http://host.docker.internal:${STAGING_HTTP_PORT};
+        proxy_pass http://staging;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
     }
@@ -119,9 +138,27 @@ server {
     server_name ${TELEMETRY_SUBDOMAIN}.${HOST};
     server_tokens off;
 
-    location / {
-        # auth_basic "Restricted Area";
-        # auth_basic_user_file /etc/apache2/.htpasswd;
-        proxy_pass http://host.docker.internal:${TELEMETRY_HTTP_PORT};
+    auth_basic "Restricted Area";
+    auth_basic_user_file /etc/apache2/.htpasswd;
+
+    location /monitor/ {
+        auth_basic "off";
+        rewrite ^/monitor/(.*)$ /$1 break;
+        proxy_pass http://monitor;
+    }
+
+    location /pipeline/ {
+        rewrite ^/pipeline/(.*)$ /$1 break;
+        proxy_pass http://pipeline;
+    }
+
+    location /logs/ {
+        rewrite ^/logs/(.*)$ /$1 break;
+        proxy_pass http://logs;
+    }
+
+    location /metrics/ {
+        rewrite ^/metrics/(.*)$ /$1 break;
+        proxy_pass http://metrics;
     }
 }
