Align with .env file

--- a/.env.buildingenvelopedata.sample
+++ b/.env.buildingenvelopedata.sample
@@ -3,16 +3,17 @@ PRODUCTION_SUBDOMAIN=www
 STAGING_SUBDOMAIN=staging
 TELEMETRY_SUBDOMAIN=telemetry
 
+EXTRA_HOST=192-102-163-92.vm.c.fraunhofer.de
+
 HTTP_PORT=7000
 HTTPS_PORT=7001
 PRODUCTION_HTTP_PORT=8000
 STAGING_HTTP_PORT=9000
-TELEMETRY_HTTP_PORT=10000
 
-EXTRA_HOST=192-102-163-92.vm.c.fraunhofer.de
-
-TELEMETRY_DATA_HOST=127.0.0.1
-TELEMETRY_DATA_PORT=10001
+MONITOR_HTTP_PORT=10000
+PIPELINE_HTTP_PORT=10001
+LOGS_HTTP_PORT=10002
+METRICS_HTTP_PORT=10003
 
 EMAIL_ADDRESS=simon.wacker@ise.fraunhofer.de
 SMTP_HOST=mail-mtaKA26.fraunhofer.de
