--- a/.env.buildingenvelopedata.sample
+++ b/.env.buildingenvelopedata.sample
@@ -14,6 +14,8 @@ MONITOR_HTTP_PORT=10000
 LOGS_HTTP_PORT=10002
 METRICS_HTTP_PORT=10003
 
+TELEMETRY_GPRC_PORT=4317
+
 EMAIL_ADDRESS=simon.wacker@ise.fraunhofer.de
 SMTP_HOST=mail-mtaKA26.fraunhofer.de
 SMTP_PORT=25
