Make Vector listen for OTLP logs, metrics, and traces, filter-out `backend` service logs, and improve local testing system

--- a/.env.development.sample
+++ b/.env.development.sample
@@ -1,9 +1,9 @@
-HOST=buildingenvelopedata.org
+HOST=machine.de
 PRODUCTION_SUBDOMAIN=www
 STAGING_SUBDOMAIN=staging
 TELEMETRY_SUBDOMAIN=telemetry
 
-EXTRA_HOST=192-102-163-92.vm.c.fraunhofer.de
+EXTRA_HOST=
 
 HTTP_PORT=7000
 HTTPS_PORT=7001
@@ -17,8 +17,8 @@ METRICS_HTTP_PORT=10003
 TELEMETRY_GPRC_PORT=4317
 TELEMETRY_HTTP_PORT=4318
 
-EMAIL_ADDRESS=simon.wacker@ise.fraunhofer.de
-SMTP_HOST=mail-mtaKA26.fraunhofer.de
+EMAIL_ADDRESS=john.doe@machine.de
+SMTP_HOST=127.0.0.1
 SMTP_PORT=25
 
 NETWORK_INTERFACE=ens160
