--- a/.env.solarbuildingenvelopes.sample
+++ b/.env.solarbuildingenvelopes.sample
@@ -15,6 +15,7 @@ LOGS_HTTP_PORT=10002
 METRICS_HTTP_PORT=10003
 
 TELEMETRY_GPRC_PORT=4317
+TELEMETRY_HTTP_PORT=4318
 
 EMAIL_ADDRESS=simon.wacker@ise.fraunhofer.de
 SMTP_HOST=mail-mtaKA26.fraunhofer.de
