--- a/.env.sample
+++ b/.env.sample
@@ -15,6 +15,7 @@ LOGS_HTTP_PORT=10002
 METRICS_HTTP_PORT=10003
 
 TELEMETRY_GPRC_PORT=4317
+TELEMETRY_HTTP_PORT=4318
 
 EMAIL_ADDRESS=john.doe@sample.org
 SMTP_HOST=mail.sample.org
