--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,25 @@ services:
       timeout: "5s"
       retries: "5"
 
+  # # Grafana instance configured with VictoriaLogs as datasource
+  # # https://github.com/VictoriaMetrics/VictoriaLogs/blob/master/deployment/docker/compose-vl-single.yml
+  # grafana:
+  #   image: grafana/grafana:12.3.1
+  #   depends_on:
+  #     - "victoriametrics"
+  #     - "victorialogs"
+  #   ports:
+  #     - 3000:3000
+  #   volumes:
+  #     - grafanadata:/var/lib/grafana
+  #     - ./provisioning/datasources/victoriametrics-logs-datasource/single.yml:/etc/grafana/provisioning/datasources/single.yml
+  #     - ./provisioning/dashboards:/etc/grafana/provisioning/dashboards
+  #     - ./../../dashboards/victorialogs.json:/var/lib/grafana/dashboards/victorialogs.json
+  #     - ./../../dashboards/victorialogs-internal.json:/var/lib/grafana/dashboards/victorialogs-internal.json
+  #   environment:
+  #     - "GF_INSTALL_PLUGINS=victoriametrics-logs-datasource"
+  #   restart: always
+
   # https://hub.docker.com/r/victoriametrics/victoria-logs
   logs:
     image: "victoriametrics/victoria-logs:v1.44.0"
